# requestman

./: Cargo.toml  requestman_collection.json
src/: collection.rs  main.rs
ui/: mainwindow.slint
ui/components/: request_panel.slint  response_panel.slint  shared.slint  sidebar.slint  url_bar.slint
